--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
 <head>
+    <link rel="stylesheet" href="./style.css">
+
 <body>
-Halla balla
+
+    <div>
+        <a>
+            Halla
+        </a>
+    </div>
+
 </body>
 </head>
 </html>
